Fix overriding of existing templates

Also, don't delete the original file after the template has been
created from it.

BUG: 413473